# wine-list

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/: init.py  main.py
src/export/: excel_exporter.py  init.py  pdf_exporter.py
src/models/: database.py  init.py  wine.py
src/ui/: admin_window.py  dashboard.py  data_management.py  export_window.py  help_window.py  init.py  main_window.py  reports_window.py  search_window.py
src/ui/dialogs/: edit_wine_dialog.py  export_dialog.py  init.py
src/ui/widgets/: chart_widget.py  init.py
src/utils/: config.py  init.py
